[package]
name = "dubins_paths"
version = "2.7.1"
authors = ["VirxEC"]
edition = "2021"
description = "Rust code for calculating Dubin's Paths"
readme = "README.md"
repository = "https://github.com/VirxEC/dubins_paths"
license = "MIT"
keywords = ["physics", "simulation", "dubin", "path-finding"]
categories = ["science", "simulation", "algorithms"]
rust-version = "1.68.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
approx = "0.5.1"
criterion = "0.8.0"
rand = "0.9.2"

[dependencies]
glam = { version = "0.30.5", optional = true }

[features]
f64 = []

[profile.release]
codegen-units = 1
lto = true
debug = true
panic = "abort"

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "bench_dubins"
harness = false
