[package]
name = "dubins_paths"
version = "3.2.0"
edition = "2024"
rust-version = "1.85.0"
description = "Rust code for calculating Dubin's Paths"
readme = "README.md"
repository = "https://github.com/VirxEC/dubins_paths"
license = "MIT"
keywords = ["dubin", "path-finding", "physics"]
categories = ["algorithms", "science"]

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "flamegraph"
required-features = ["alloc"]

[[example]]
name = "near"
required-features = ["alloc"]

[[bench]]
harness = false
name = "bench_dubins"
required-features = ["alloc"]

[dependencies]
glam = { version = "0.32.0", default-features = false, optional = true }
libm = { version = "0.2.15", optional = true }
rkyv = { version = "0.8.12", default-features = false, optional = true }
serde = { version = "1.0.228", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
approx = "0.5.1"
criterion = "0.8.0"
plotters = "0.3.3"
rand = "0.10.0"

[features]
default = ["std"]
alloc = ["rkyv?/alloc", "serde?/alloc"]
bytecheck = ["glam?/bytecheck", "rkyv"]
libm = ["dep:libm", "glam?/nostd-libm"]
rkyv = ["dep:rkyv", "glam?/rkyv"]
serde = ["dep:serde", "glam?/serde"]
std = ["alloc", "glam?/std", "rkyv?/std", "serde?/std"]

[lints.rust]
unsafe_code = "forbid"

[profile.release]
debug = true
lto = true
panic = "abort"
codegen-units = 1
